--- a/Day1/style.css
+++ b/Day1/style.css
@@ -15,10 +15,12 @@ body {
 }
 
 .neon-btn {
+    display: inline-block;
     padding: 15px 30px;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 3px;
+    transition: all .5s ease;
 }
 
 .btn-1 {
