--- a/Day3/style.css
+++ b/Day3/style.css
@@ -89,3 +89,25 @@ ul {
     color: var(--secondary-color);
 }
 
+.actions {
+    padding: 12px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.circle {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: #fe4d46;
+    box-shadow: 14px 0 0 0 #fdc023, 28px 0 0 0 #7dd21f;
+}
+
+.circle-2 {
+    border-radius: 50%;
+    width: 4px;
+    height: 4px;
+    background-color: #d5d7e3;
+    box-shadow:-6px 0 0 0 #d5d7e3, 6px 0 0 0 #d5d7e3;
+}
+
