--- a/Day3/style.css
+++ b/Day3/style.css
@@ -53,7 +53,7 @@ ul {
     width: 100%;
     max-width: 1200px;
     height: 90vh;
-    max-width: 900px;
+    max-height: 900px;
     background: #fff;
     border-radius: 4px;
     overflow: hidden;
@@ -74,6 +74,7 @@ ul {
     color: var(--main-color);
     margin-bottom: 14px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .item i {
@@ -111,3 +112,278 @@ ul {
     box-shadow:-6px 0 0 0 #d5d7e3, 6px 0 0 0 #d5d7e3;
 }
 
+.page-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 40px 20px 0 20px;
+}
+
+.page-content .header {
+    font-size: 26px;
+    color: var(--main-color);
+    margin-top: 30px;
+}
+
+.content-categories {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+    padding: 20px 0;
+}
+
+.nav-item {
+    display: none;
+}
+
+.category {
+    font-weight: 500;
+    color: var(--secondary-color);
+    border-bottom: 1px solid #ddd;
+    transition: .2s ease-in;
+    padding: 20px 30px;
+    cursor: pointer;
+}
+
+#opt-1:checked + label,
+#opt-2:checked + label,
+#opt-3:checked + label,
+#opt-4:checked + label {
+    color: var(--checkbox-color);
+    border-bottom: 2px solid var(--checkbox-color);
+}
+
+.task-item {
+    display: none;
+}
+
+.task-wrapper {
+    padding: 30px 8px 0 0;
+    flex: 1;
+    overflow-y: auto;
+    height: 100%;
+}
+
+.task {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 16px;
+    padding-left: 30px;
+    color: var(--task-color);
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.task:hover {
+    transform: translateX(2px);
+}
+
+.task label {
+    cursor: pointer;
+}
+
+label .label-text {
+    position: relative;
+}
+
+label .label-text::before {
+    position: absolute;
+    content: '';
+    width: 14px;
+    height: 14px;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    left: -24px;
+    transition: .2s ease;
+}
+
+.task-item:checked + label .label-text::before {
+    background-color: var(--checkbox-color);
+    border: none;
+    background-image: url(check.svg);
+    background-repeat: no-repeat;
+    background-size: 10px;
+    background-position: center;
+    border: 1px solid var(--checkbox-color);
+}
+
+.tag {
+    font-size: 10px;
+    padding: 4px 8px;
+    border-radius: 20px;
+}
+
+.tag.approved {
+    background-color: var(--tag-color-one);
+    color: var(--tag-color-text-one);
+}
+
+.tag.progress {
+    background-color: var(--tag-color-two);
+    color: var(--tag-color-text-two);
+}
+
+.tag.review {
+    background-color: var(--tag-color-three);
+    color: var(--tag-color-text-three);
+}
+
+.tag.waiting {
+    background-color: var(--tag-color-four);
+    color: var(--tag-color-text-four);
+}
+
+.upcoming {
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 25px;
+    margin-bottom: 30px;
+}
+
+.members {
+    display: flex;
+    margin-top: 14px;
+}
+
+.members img{
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin-right: 4px;
+    object-fit: cover;
+}
+
+.right-bar {
+    width: 320px;
+    border-left: 1px solid #e3e7f7;
+    display: flex;
+    flex-direction: column;
+}
+
+.right-bar .header {
+    font-size: 20px;
+    color: var(--main-text-color);
+    margin-left: 30px;
+}
+
+.top-part {
+    padding: 30px;
+    align-self: flex-end;
+}
+
+.top-part .count {
+    font-size: 12px;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    background-color: #623ce8;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-content {
+    padding: 10px 40px;
+    overflow-y: auto;
+    flex: 1;
+}
+
+.task-box {
+    position: relative;
+    border-radius: 12px;
+    width: 100%;
+    margin: 20px 0;
+    padding: 16px;
+    cursor: pointer;
+}
+
+.task-box:hover {
+    transform: scale(1.02);
+}
+
+.time {
+    margin-bottom: 6px;
+    opacity: 0.4;
+    font-size: 10px;
+}
+
+body, .item {
+    display: flex;
+    align-items: center;
+}
+
+.task-name {
+    font-size: 14px;
+    font-weight: 500;
+    opacity: 0.6;
+}
+
+.yellow {
+    background-color: var(--box-color);
+}
+
+.blue {
+    background-color: var(--box-color-2);
+}
+
+.red {
+    background-color: var(--box-color-3);
+}
+
+.green {
+    background-color: var(--box-color-4);
+}
+
+.more-button {
+    position: absolute;
+    width: 3px;
+    height: 3px;
+    border-radius: 50%;
+    background-color: #8e92a4;
+    box-shadow: 0 -4px 0 0 #8e92a4, 0 4px 0 0 #8e92a4;
+    opacity: 0.4;
+    right: 20px;
+    top: 30px;
+    cursor: pointer;
+}
+
+@media (max-width: 900px) {
+    .left-bar {
+        display: none;
+    }   
+}
+
+
+@media (max-width: 700px) {
+    .task-manager {
+        flex-direction: column;
+        overflow-y: auto;
+    }
+
+    .right-bar,
+    .page-content {
+        width: 100%;
+        display: block;
+    }
+
+    .task-wrapper {
+        height: auto;
+    }  
+}
+
+
+@media (max-width: 520px) {
+    .page-content {
+        padding: 40px 10px 0 10px;
+    }
+
+    .right-content {
+        padding: 10px 16px;
+    }
+
+    .category {
+        padding: 10px;
+    }
+}
